--- a/page2.html
+++ b/page2.html
@@ -136,22 +136,22 @@
                         <div class="row row-no-gutters social">
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="twitter" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="facebook" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="dribbble" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
                                 </div>
                             </div>
                             <div class="col-sm-3">
                                 <div class="text-center">
-                                    <a class="instagram" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+                                    <a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
                                 </div>
                             </div>
                         </div>
