--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -12,14 +12,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
-
-    <script src="./js/jquery-2.1.0.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/blocs.min.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>Contact</title>
 
 
     <!-- Analytics -->
@@ -32,6 +25,7 @@
     <!-- Principal conteneur -->
     <div class="page-container">
 
+        <header>
         <!-- bloc-0 -->
         <div class="bloc bgc-white l-bloc " id="bloc-0">
             <div class="container bloc-sm">
@@ -50,7 +44,7 @@
                             <li>
                             </li>
                             <li>
-                                <a href="page2.html">page2 &gt;</a>
+                                <a href="page2.html">Contact &gt;</a>
                             </li>
                         </ul>
                     </div>
@@ -58,6 +52,7 @@
             </div>
         </div>
         <!-- bloc-0 END -->
+    </header>
 
         <!-- bloc-6 -->
         <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
@@ -77,6 +72,7 @@
         <!-- bloc-6 END -->
 
         <!-- bloc-7 -->
+        <form>
         <div class="bloc bgc-white l-bloc" id="bloc-7">
             <div class="container bloc-lg">
                 <div class="row">
@@ -118,13 +114,14 @@
                 </div>
             </div>
         </div>
+    </form>
         <!-- bloc-7 END -->
 
         <!-- ScrollToTop Button -->
         <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
         <!-- ScrollToTop Button END-->
 
-
+        <footer>
         <!-- Footer - bloc-8 -->
         <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
             <div class="container bloc-sm">
@@ -159,11 +156,18 @@
                 </div>
             </div>
         </div>
+    </footer>
         <!-- Footer - bloc-8 END -->
+
 
     </div>
     <!-- Principal conteneur END -->
 
+    <script src="./js/jquery-2.1.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/blocs.min.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/formHandler.js"></script>
 
 </body>
 
